last correction to chapter 3 in the conclusion suggested by Marcelo

--- a/mapping.tex
+++ b/mapping.tex
@@ -225,6 +225,8 @@ Another useful characteristic is that in the case of a local network with many d
 
 Lastly, and of particular relevance to the primary topic of this paper, is that the current state of mappings between various devices on the network can be viewed and modified by any graphical user interface that embeds Libmapper. In Libmapper parlance, these applications can register as \emph{monitors}. Because of this capability, multiple members of a team can be viewing and modifying the same mappings for multiple DMIs using different computers and using different graphical user interfaces.  
 
+A network with Libmapper-enabled devices and monitors is a \emph{Mapper network}.
+
 \subsection{Open Sound Control Protocol}
 
 Seen from a bird's eye conceptual level, Libmapper is an implementation of a communication protocol that was created for specifying mappings over a distributed network \cite{Malloch2009}. 
