--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -2,7 +2,7 @@
 
 \chapter{User Interface and Data Visualization Design}
 
-The bounds of the discipline of \emph{human-computer interaction} vary depending on who is asked. At present, people who practice the discipline understand human-computer interaction (HCI) to involve "the design, implementation and evaluation of interactive systems in the context of the user's task and work" \cite{hci1998}. 
+The bounds of the discipline of \emph{human-computer interaction} vary depending on who is asked. At present, people who practice the discipline seem to agree that human-computer interaction (HCI) involves "the design, implementation and evaluation of interactive systems in the context of the user's task and work" \cite{hci1998}. 
 
 Within the broad domain of interactive systems, different subdisciplines within human-computer interaction (HCI) focus on different aspects of the systems. Designing a user interface for manipulating a Mapper network is an interesting task because the design problem is a composite of two interrelated subproblems. The first is visualizing the current state of the Mapper network in such a way as to allow a user to quickly reason about other possible states of the network. Solving this first problem effectively helps with the second problem, which is creating an interface that allows a user to determine what actions within the interface should be taken to move the network to a different, more desirable state. 
 
@@ -51,14 +51,14 @@ It is clear from history that, in some sense, computing machines have always had
 
 \item In recent years it has become practical to interact with the computer in a more conversational/realtime manner and system designers focus on the entire process of a user interacting with the system over an extended period of time, from initial exposure to practiced expert interaction. The focus of the interface designer becomes less trained on issues of ergonomics and visual perception and more trained on deeper cognitive issues like learning and problem solving. The interface now encompasses the proclivities of the mind. 
 
-\item Impressively, Grudin predicts the advent of social networking in what he labels \emph{groupware}, the fifth focus of interface development. When a single system serves a large group of interacting people (setting this scenario apart from the earliest batch systems where different users rarely interacted) as opposed to an individual, the user interface becomes the dynamics of interaction between the members of the group.
+\item Impressively, Grudin predicts the advent of social networking in what he labels \emph{groupware}, the fifth focus of interface development. When a single system serves a large group of interacting people (setting this scenario apart from the earliest batch systems where different users rarely interacted) as opposed to an individual, the user interface becomes entangled with the dynamics of interaction between the members of the group.
 \end{enumerate}
 
 Ultimately, Grudin cites these observations within the context of the framework of five foci to support the assertion that the history of the computer is one of the computer extending its interface with the world outward from its hardware implementation and deep into the intanglible aspects of human behavior and a broader understanding of how we accomplish tasks in everyday life \cite{continuity1990}.
 
 \section{Task Analysis}
 
-Task analysis is a class of techniques used in HCI to guide the design of user interfaces. One of the central assumptions of user interface design and HCI is that different tasks require different interfaces. A corollary of this premise is that thinking carefully about the nature of the tasks that are meant to be accomplished through the interface results in better design decisions. Crystal and Ellington performed an in-depth comparative analysis of the dominant techniques and provide a good introduction to the motivations of task analysis:
+Task analysis is a class of techniques used in HCI to guide the design of user interfaces. One of the central assumptions of user interface design and HCI is that different tasks require different interfaces. This is mirrored in the history of user interfaces. As the users and tasks performed with the computer changes, so does the interface. A corollary of this premise is that thinking carefully about the nature of the tasks that are meant to be accomplished through the interface results in better design decisions. Crystal and Ellington performed an in-depth comparative analysis of the dominant techniques and provide a good introduction to the motivations of task analysis:
 
 \begin{quote}
 "Practitioners and researchers routinely advocate building user-centered systems which enable people to reach their goals, take account of natural human limitations, and generally are intuitive, efficient and pleasurable to use (Preece, Rogers and Sharp, 2002). Central to the design of such systems is a clear understanding of what users actually want to do: What are their tasks? What is the nature of those tasks? Many techniques have been proposed to help answer these questions. Task analysis techniques are particularly important because they enable rigorous, structured characterizations of user activity. They provide a framework for the investigation of existing practices to facilitate the design of complex systems.
@@ -92,9 +92,9 @@ Graphics are thought to have at least two distinct uses. The first is communicat
 
 It is useful to categorize all possible data into three types, as distinguished by their function \cite{card1997}:
 \begin{description}
-\item \emph{Nominal} - data values that are understood as either = or not = to each other - examples are the set of religions, colors, and professions
-\item \emph{Ordinal} - data values that can be understood using a greater-than or less-than relation in some way - an example is the set of the days of the week
 \item \emph{Quantitative} - data values that can be manipulated with arithmetic - an example is the population of a city 
+\item \emph{Ordinal} - data values that can be understood using a greater-than or less-than relation in some way - an example is the set of the days of the week
+\item \emph{Nominal} - data values that are understood as either = or not = to each other - examples are the set of religions, colors, and professions
 \end{description}
 
 \begin{table}
@@ -158,7 +158,7 @@ This theoretical framework will be used in Chapter 4 to weigh possible visualiza
 
 \section{Recall and Recognition}
 
-There are certain aspects of cognitive functionality that are well-studied and easily applied. These provide useful theoretical guides for designing efficient user interfaces. The remainder of this chapter outlines those hypotheses that are most relevant to the Vizmapper interface.
+There are certain aspects of cognitive functionality that are well-studied and easily applied to interface design. These provide useful theoretical guides for designing efficient user interfaces. The remainder of this chapter outlines those hypotheses that are most relevant to the Vizmapper interface.
 
 It is common to understand human information retrieval in terms of two types of retrieval, recall and recognition. In the recall process, information is reproduced from memory. In the recognition process, a piece of information induces the knowledge that the information is not new; it has been seen before and the information acts as a cue \cite{hci1998}. In this respect, recognition is a less complex cognitive activity. Recall can be assisted with cues that allow an individual to speed access to the information in their memory. One proven cue is the use of categories.
 
@@ -193,9 +193,9 @@ Hierarchies and taxonomies (classification schemes arranged hierarchically and u
 
 The basis of this theory stems from a famous paper by George A. Miller called \emph{The Magical Number Seven} \cite{seven1956}. Central to Miller's two central hypotheses is the common concept of the \emph{bit}. Briefly, one bit of information is defined as the amount of information that is required to make a decision between two equally likely alternatives \cite{seven1956}. It is precisely the amount of information that is required to know whether a flipped coin is heads or tails. Two bits is the amount of information needed to decide between four equally likely alternatives. Three bits is the amount of information needed to decide between 8 equally likely alternatives and so on...
 
-The first hypothesis is that a person's ability to distinguish between elements of a set, regardless of what sense is perceiving the elements, is roughly limited to between 2.3 and 2.8 bits, which corresponds to 7 plus or minus two elements. This is referred to as the \emph{span of absolute judgement}. Note well, that this is only true of elements that vary along one perceived dimension. For instance, human faces are perceived among multiple visual property dimensions. Otherwise, we would never be able to distinguish between the faces of more than 10 people! Also, there are well-known exceptions to this rule. A musical example is the ability of a person with \emph{absolute pitch} to accurately distinguish between around 60 different pitches \cite{seven1956}. The exact number of bits has changed as our understanding of the brain has improved since 1956, but what has not changed is that the number is lower than one might expect. 
+The first hypothesis is that a person's ability to distinguish between elements of a set, regardless of what sense is perceiving the elements, is roughly limited to between 2.3 and 2.8 bits (this is not \emph{exactly} what Miller says), which corresponds to 7 plus or minus two elements. This is referred to as the \emph{span of absolute judgement}. Note well, that this is only true of elements that vary along one perceived dimension. For instance, human faces are perceived among multiple visual property dimensions. Otherwise, we would never be able to distinguish between the faces of more than 10 people! Also, there are well-known exceptions to this rule. A musical example is the ability of a person with \emph{absolute pitch} to accurately distinguish between around 60 different pitches \cite{seven1956}. The exact number of bits understood to be average span of absolute judgement has changed as our understanding of the brain has improved since 1956, but what has not changed is that the number is lower than one might expect. 
 
-The second related hypothesis has to do with the \emph{span of immediate memory}. Immediate memory is the abstract understanding of the temporary memory store that one uses during conscious reasoning. In this case, the relevant parameter is no longer a bit, but a \emph{chunk}. The number of chunks that humans can hold in immediate memory and reason about is also about 7. A chunk can represent up to a similarly low number of bits (two to three) in immediate memory. However, a chunk can also represent a number of chunks, which allows one to reason about a large number of bits of information as long as they are hierarchically organized such that lower level chunks are represented by higher level chunks.
+The second related hypothesis has to do with the \emph{span of immediate memory}. Immediate memory is the abstract model of the temporary memory store that one uses during conscious reasoning. In this case, the relevant parameter is no longer a bit, but a \emph{chunk}. The number of chunks that humans can hold in immediate memory and reason about is also about 7. A chunk can represent a similarly low magic number of bits (two to three) in immediate memory. However, a chunk can also represent a similar number of chunks instead of bits, which allows one to reason about a large number of bits of information as long as they are hierarchically organized such that lower level chunks are represented by higher level chunks.
 
 \begin{quote}
 "In the jargon of communication theory, this process would be called \emph{recoding}. The input is given in a code that contains many chunks with few bits per chunk. The operator recodes the input into another code that contains fewer chunks with more bits per chunk. There are many ways to do this recoding, but probably the simplest is to group the input events, apply a new name to the group, and then remember the new name rather than the original input events." \cite{seven1956}
@@ -216,18 +216,18 @@ Visual Information Seeking: Tight Coupling of Dynamic Query Filters with Starfie
 
 When dealing with a data set with a high cardinality for one component or another, filtering becomes a very attractive feature for a user interface to have. This is especially true when the goal of a user interface or data visualization is not only to improve the ability for a user to extrapolate high level integrative knowledge about the set of data, but to focus on and select specfic data for manipulation as required by the Vizmapper interface. This focus is related to data visualization, but is referred to as \emph{visual information seeking} (VIS) to distinguish it from data visualization. 
 
-Filtering, like hiearchical organization, provides a mechanism for reducing the perceived complexity of a data set. Unlike hiearchical organization, which preserves the overall cardinality of the data set, filtering temporarily restricts to a subset within the subset that meet the parameters of the filter. Filters can be implemented graphically by using sliders, drop down menus, and other common graphical widgets or use textual queries. Hierarchical organization can itself be used as a filtering mechanism by acting as predefined set of salient queries (for example, to restrict the set of all animals to mammals from a typical hiearchical biological classification).
+Filtering, like hiearchical organization, provides a mechanism for reducing the perceived complexity of a data set. Unlike hiearchical organization, which preserves the overall cardinality of the data set, filtering temporarily restricts the visible set to a subset within the complete set that meet the parameters of the filter. Filters can be implemented graphically by using sliders, drop down menus, and other common graphical widgets or use textual queries. Hierarchical organization can itself be used as a filtering mechanism by acting as predefined set of salient queries (for example, to restrict the set of all animals to mammals from a typical hiearchical biological classification).
 
 Most of this understanding of filters in the context of VIS comes from a paper by Ahlberg and Schneiderman \cite{seeking1994}. The relevance of filters to the problem of mapping in a large MSN is best summarized as follows:
 
 \begin{quote}
-"The key to these principles is understanding the enormous capacity for human visual information processing. By presenting information visually and allowing dynamic user control through direct manipulation principles, it is possible to traverse large informaiton spaces and facilitate comprehension with reduced anxiety." \cite{seeking1994}
+"The key to these principles is understanding the enormous capacity for human visual information processing. By presenting information visually and allowing dynamic user control through direct manipulation principles, it is possible to traverse large information spaces and facilitate comprehension with reduced anxiety." \cite{seeking1994}
 \end{quote}
 
 The principle of \emph{tight coupling} in a user interface is of particular interest when including filtering capabilities in an interface because it makes clear the distinction between filtering and searching. Tight coupling applies to many aspects of a user interface and broadly refers to maintaining tightly coupled consistency between the state of a data visualization and any user actions that are supposed to change the state of the system. If it is possible for a user to break this consistency between the visual state of the system and the actual state of the system the user will likely be confused. 
 
 Typically when searching a database the system state begins by displaying an empty set of data because no query has been made. Once a query is executed than the interface displays a subset of data (in graphical or textual form) that correspond to the elements of the entire data set that match the search query. Conversely, when filtering a data set the initial state of the system with an empty query is to display the entire set of available data and to reduce the amount of information on the screen as the query becomes more specific. The difference is admittedly subtle. However, when a user is introduced to a large data set for the first time, the filtering convention is much less confusing because it is much more disorienting to be presented with a empty set of data than it is to be presented with too much data \cite{seeking1994}. It is more difficult for a user to determine what the first action to take should be in the former case.
 
-The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the problem of designing a user interface that involves the visualization of a large data set.
+The purpose of introducing these aspects of cognition and effective design that others have discovered is not to provide a set of \emph{rules} to govern the decisions that are made in the Vizmapper design. Many of these connections between interfaces and cognition are not rigorously provable in the sense that the principles of physics or electrical engineering are arguably provable. The purpose of the introduction of this thesis, and specifically the initial quotation, is to make this clear from the outset. 
 
-smoother chapter transition
+However, this is the minimum due diligence that ought to be applied when making a good faith attempt to \emph{improve} how someone accomplishes a task. The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the broad problem of designing a user interface and the specific problem of visualizing and manipulating a large data set through a graphical user interface. 
